--- a/JavaScript/week_16/auto/index.html
+++ b/JavaScript/week_16/auto/index.html
@@ -96,14 +96,14 @@
             </div>
 
             <div class="item">
-              <p class="text">Пробег:</p>
+              <p class="text">Пробег, км:</p>
               <div class="content">
                 <input
                   required
                   class="mileage"
                   type="text"
                   id="mileage"
-                  placeholder="50000 км"
+                  placeholder="50000"
                 />
               </div>
               <div class="mileage__alarm"></div>
