changed some html

--- a/JavaScript/week_16/tasks/index.html
+++ b/JavaScript/week_16/tasks/index.html
@@ -6,5 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Неделя 16 - задачи</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Задачи с массивами</h1>
+    <p>
+      Задачи с массивами являются одним из часто встречаемых в работе
+      программиста и, как следствие, на собеседованиях. Поэтому давай
+      потренируемся использовать изученные методы.
+    </p>
+
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
