--- a/JavaScript/week_17/anonim/index.html
+++ b/JavaScript/week_17/anonim/index.html
@@ -10,7 +10,18 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>Анонимные комментарии</h1>
+      <h1 class="title">Анонимные комментарии</h1>
+      <form class="container" action="#">
+        <p>Оставьте ваше сообщение:</p>
+        <textarea
+          name="textarea"
+          class="textarea"
+          cols="30"
+          rows="10"
+        ></textarea>
+        <button class="button">Отправить</button>
+      </form>
+      <div class="result"></div>
     </div>
 
     <script src="./assets/js/script.js"></script>
