--- a/JavaScript/week_17/random/index.html
+++ b/JavaScript/week_17/random/index.html
@@ -10,7 +10,40 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>Генератор случайных чисел</h1>
+      <h1 class="title">Генератор случайных чисел от -10 до 10</h1>
+      <button class="button">Сгенерировать</button>
+
+      <div class="items">
+        <div class="item">
+          <p class="subtitle">Сгенерированные числа:</p>
+          <div class="result" id="numbers"></div>
+        </div>
+
+        <div class="item">
+          <p class="subtitle">Минимальное число:</p>
+          <div class="result" id="min"></div>
+        </div>
+
+        <div class="item">
+          <p class="subtitle">Максимальное число:</p>
+          <div class="result" id="max"></div>
+        </div>
+
+        <div class="item">
+          <p class="subtitle">Среднее арифметическое:</p>
+          <div class="result" id="mean"></div>
+        </div>
+
+        <div class="item">
+          <p class="subtitle">Сумма чисел:</p>
+          <div class="result" id="sum"></div>
+        </div>
+
+        <div class="item">
+          <p class="subtitle">Произведение чисел:</p>
+          <div class="result" id="product"></div>
+        </div>
+      </div>
     </div>
 
     <script src="./assets/js/script.js"></script>
