--- a/JavaScript/week_17/date/index.html
+++ b/JavaScript/week_17/date/index.html
@@ -11,6 +11,13 @@
   <body>
     <div class="wrapper">
       <h1>Дата</h1>
+
+      <div class="items">
+        <div class="present"></div>
+        <div class="seconds"></div>
+        <div class="minutes"></div>
+        <div class="date"></div>
+      </div>
     </div>
 
     <script src="./assets/js/script.js"></script>
