added random js

--- a/JavaScript/week_17/random/index.html
+++ b/JavaScript/week_17/random/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <h1 class="title">Генератор случайных чисел от -10 до 10</h1>
-      <button class="button">Сгенерировать</button>
+      <button class="button" onclick="getNumbers()">Сгенерировать</button>
 
       <div class="items">
         <div class="item">
