added some js for fio

--- a/JavaScript/week_17/fio/index.html
+++ b/JavaScript/week_17/fio/index.html
@@ -21,6 +21,7 @@
                   class="form__field"
                   type="text"
                   id="fio"
+                  value=""
                   placeholder="Введите ФИО"
                 />
               </div>
@@ -36,14 +37,26 @@
             <div class="form__item">
               <label class="form__label" for="lastName">Фамилия:</label>
               <div class="form__fields">
-                <input class="form__field" type="text" id="lastName" disabled />
+                <input
+                  class="form__field"
+                  type="text"
+                  id="lastName"
+                  value=""
+                  disabled
+                />
               </div>
             </div>
 
             <div class="form__item">
               <label class="form__label" for="name">Имя:</label>
               <div class="form__fields">
-                <input class="form__field" type="text" id="name" disabled />
+                <input
+                  class="form__field"
+                  type="text"
+                  id="name"
+                  value=""
+                  disabled
+                />
               </div>
             </div>
 
@@ -54,6 +67,7 @@
                   class="form__field"
                   type="text"
                   id="patronymic"
+                  value=""
                   disabled
                 />
               </div>
