added js for fio

--- a/JavaScript/week_17/fio/index.html
+++ b/JavaScript/week_17/fio/index.html
@@ -33,6 +33,7 @@
         </div>
 
         <div class="form__container">
+          <p>Ваши данные:</p>
           <form class="form__items" action="#">
             <div class="form__item">
               <label class="form__label" for="lastName">Фамилия:</label>
