added js for date

--- a/JavaScript/week_17/date/index.html
+++ b/JavaScript/week_17/date/index.html
@@ -10,14 +10,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>Дата</h1>
-
-      <div class="items">
-        <div class="present"></div>
-        <div class="seconds"></div>
-        <div class="minutes"></div>
-        <div class="date"></div>
-      </div>
+      <h1>Отформатировать дату</h1>
     </div>
 
     <script src="./assets/js/script.js"></script>
