added txt, fixed some js and styles

--- a/JavaScript/week_17/fio/index.html
+++ b/JavaScript/week_17/fio/index.html
@@ -25,9 +25,12 @@
                   placeholder="Введите ФИО"
                 />
               </div>
+            </div>
+            <div class="buttons">
               <button class="form__button" type="submit">Отправить</button>
               <button class="form__button_reset" type="submit">Сбросить</button>
             </div>
+
             <div id="errorFio"></div>
           </form>
         </div>
@@ -39,7 +42,7 @@
               <label class="form__label" for="lastName">Фамилия:</label>
               <div class="form__fields">
                 <input
-                  class="form__field"
+                  class="form__group"
                   type="text"
                   id="lastName"
                   value=""
@@ -52,7 +55,7 @@
               <label class="form__label" for="name">Имя:</label>
               <div class="form__fields">
                 <input
-                  class="form__field"
+                  class="form__group"
                   type="text"
                   id="name"
                   value=""
@@ -65,7 +68,7 @@
               <label class="form__label" for="patronymic">Отчество:</label>
               <div class="form__fields">
                 <input
-                  class="form__field"
+                  class="form__group"
                   type="text"
                   id="patronymic"
                   value=""
