added js for registration

--- a/JavaScript/week_18/cats/index.html
+++ b/JavaScript/week_18/cats/index.html
@@ -58,15 +58,15 @@
             <div class="notes__items">
               <p class="notes__item">Допустимые форматы номера телефона:</p>
               <p class="notes__item">
-                +375<span class="code">??</span
-                ><span class="number">*******</span> или +375<span class="code"
-                  >??</span
+                +375<span class="code">XX</span
+                ><span class="number">*******</span> или 80<span class="code"
+                  >XX</span
                 ><span class="number">*******</span>
               </p>
             </div>
             <div class="notes__items">
               <p class="notes__item">
-                <span class="code">??</span> - код мобильного оператора (29 / 25
+                <span class="code">XX</span> - код мобильного оператора (29 / 25
                 / 44 / 33)
               </p>
               <p class="notes__item">
