added some js for comments

--- a/JavaScript/week_18/comments/index.html
+++ b/JavaScript/week_18/comments/index.html
@@ -11,6 +11,28 @@
   <body>
     <div class="wrapper">
       <h1>Заголовок</h1>
+      <div class="container">
+        <p class="text">Привет! Как дела?</p>
+        <div class="field"></div>
+        <div class="info">
+          <input
+            type="text"
+            name="person"
+            id="person"
+            placeholder="Введите Ваше имя..."
+          />
+        </div>
+        <textarea
+          name="textarea"
+          class="textarea"
+          cols="30"
+          rows="5"
+          placeholder="Введите сообщение..."
+        ></textarea>
+        <button class="button">Отправить</button>
+      </div>
     </div>
+
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
