--- a/JavaScript/week_18/comments/index.html
+++ b/JavaScript/week_18/comments/index.html
@@ -28,6 +28,7 @@
           cols="30"
           rows="5"
           placeholder="Введите сообщение..."
+          required
         ></textarea>
         <button class="button">Отправить</button>
       </div>
