fixed notes and comments

--- a/JavaScript/week_18/notes/index.html
+++ b/JavaScript/week_18/notes/index.html
@@ -23,7 +23,11 @@
         ></textarea>
         <div class="error"></div>
         <input type="date" onchange="onDateChange()" class="date" />
-        <button class="btn">Добавить заметку</button>
+        <div class="buttons">
+          <button class="btn">Добавить заметку</button>
+          <button class="btn__remove">Удалить все заметки</button>
+        </div>
+
         <div class="result"></div>
       </div>
     </div>
