--- a/JavaScript/week_18/cats/index.html
+++ b/JavaScript/week_18/cats/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <h1 class="title">Страница-опросник для владельцев котиков</h1>
-      <form>
+      <form action="#">
         <div class="main">
           <div class="main__item">
             <input
@@ -190,7 +190,7 @@
             name="comment"
             id="comment"
             cols="30"
-            rows="10"
+            rows="5"
             placeholder="Если хотите добавить что-то важное, можно написать здесь"
           ></textarea>
         </div>
