added js for calculator

--- a/JavaScript/week_19/calculator/index.html
+++ b/JavaScript/week_19/calculator/index.html
@@ -11,6 +11,24 @@
   <body>
     <div class="wrapper">
       <h1>Калькулятор</h1>
+      <div class="calculator" id="calculator">
+        <h2 class="subtitle">Калькулятор</h2>
+        <p>Число 1: <input class="numbers" type="text" id="number1" /></p>
+        <p>Число 2: <input class="numbers" type="text" id="number2" /></p>
+
+        <div class="calculator__buttons">
+          <button class="calculator__button" id="addition">&#43;</button>
+          <button class="calculator__button" id="subtraction">&#8722;</button>
+          <button class="calculator__button" id="multiplication">&#215;</button>
+          <button class="calculator__button" id="division">&#247;</button>
+        </div>
+        <div class="calculator__result">
+          <p id="result">Результат:</p>
+        </div>
+        <button class="message__button" onclick="getReset()">
+          Сбросить значения
+        </button>
+      </div>
     </div>
 
     <script src="./assets/js/script.js"></script>
