added version with formdata for cats

--- a/JavaScript/week_19/cats/index.html
+++ b/JavaScript/week_19/cats/index.html
@@ -17,7 +17,7 @@
             <input
               class="field"
               type="text"
-              name="nominal"
+              name="nickname"
               id="nickname"
               placeholder="Напишите кличку питомца"
               required
@@ -27,7 +27,7 @@
             <input
               class="field"
               type="text"
-              name="nominal"
+              name="name"
               id="name"
               placeholder="Напишите свое имя"
               required
@@ -37,7 +37,7 @@
 
         <div>
           <p class="subtitle">Выберите породу</p>
-          <select class="breed">
+          <select class="breed" name="breed">
             <option value="Метис" selected="selected">Метис</option>
             <option value="Абиссинская">Абиссинская</option>
             <option value="Австралийский мист">Австралийский мист</option>
@@ -60,21 +60,21 @@
           <input
             type="checkbox"
             class="food"
-            name="feed"
+            name="food"
             value="Сухой корм"
             id="dry"
           /><label for="dry">Сухой корм</label><br />
           <input
             type="checkbox"
             class="food"
-            name="feed"
+            name="food"
             value="Влажный корм"
             id="wet"
           /><label for="wet">Влажный корм</label><br />
           <input
             type="checkbox"
             class="food"
-            name="feed"
+            name="food"
             value="Натуральный корм"
             id="natural"
           /><label for="natural">Натуральный корм</label>
