added js for nasa

--- a/JavaScript/week_20/nasa/index.html
+++ b/JavaScript/week_20/nasa/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>NASA</h1>
+      <h1 class="title"></h1>
+      <img class="img" src="" alt="" />
+      <div class="more"></div>
     </div>
 
     <script src="./assets/js/script.js"></script>
