--- a/JavaScript/week_20/github/index.html
+++ b/JavaScript/week_20/github/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Open API</title>
+    <title>GitHub</title>
   </head>
   <body>
+    <div class="wrapper">
+      <img class="photo" src="" alt="" />
+      <h2 class="login"></h2>
+    </div>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
