--- a/JavaScript/week_21/gif/index.html
+++ b/JavaScript/week_21/gif/index.html
@@ -11,6 +11,12 @@
   <body>
     <div class="wrapper">
       <h1>GIF</h1>
+      <form action="#">
+        <p>Искать гифку</p>
+        <input type="text" class="searh" />
+        <button class="btn">Найти!</button>
+      </form>
+      <div class="add"></div>
     </div>
     <script src="./assets/js/script.js"></script>
   </body>
