--- a/JavaScript/week_21/gif/index.html
+++ b/JavaScript/week_21/gif/index.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>GIF</h1>
-      <form action="#">
-        <p>Искать гифку</p>
-        <input type="text" class="searh" />
-        <button class="btn">Найти!</button>
+      <h1 class="title">Форма поиска по GIF-кам</h1>
+      <form action="#" class="form">
+        <p>Что нужно найти?</p>
+        <input type="text" class="search" />
+        <button class="btn">Искать!</button>
       </form>
       <div class="add"></div>
     </div>
